# Small-Flask-Blog

./: README.md  app.py  database.db  init_db.py  procfile  pyproject.toml  requirements.txt  schema.sql
templates/: about.html  base.html  create.html  edit.html  index.html  post.html
